# ArtEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt
engine/include/: camera_component.hpp  component.hpp  component_type_id.hpp  ecs_engine-inl.hpp  ecs_engine.hpp  engine.hpp  entities_view.hpp  entity.hpp  entity_id.hpp  event_component.hpp  game.hpp  game_engine.hpp  game_engine_config.hpp  input_engine.hpp  input_event.hpp  input_event_system.hpp  lifetime_component.hpp  lifetime_system.hpp  mesh.hpp  movement_component.hpp  movement_system.hpp  parent_component.hpp  position_component.hpp  rendering_context.hpp  rendering_system.hpp  reosource_id.hpp  resource_managed_component.hpp  resource_manager-inl.hpp  resource_manager.hpp  resource_manager_config.hpp  resource_manager_system.hpp  shader.hpp  system-inl.hpp  system.hpp  window.hpp
engine/src/: ecs_engine.cpp  engine.cpp  entity.cpp  game.cpp  game_engine.cpp  input_engine.cpp  input_event_system.cpp  lifetime_system.cpp  mesh.cpp  movement_system.cpp  rendering_system.cpp  resource_manager.cpp  resource_manager_system.cpp  shader.cpp  system.cpp  window.cpp
examples/: CMakeLists.txt
examples/cube_of_cubes/: CMakeLists.txt
examples/cube_of_cubes/resources/: shader.glsl
examples/cube_of_cubes/src/: main.cpp
examples/resource_manager_autoreload/: CMakeLists.txt
examples/resource_manager_autoreload/resources/: mesh.txt  shader.glsl  triangle_mesh.txt
examples/resource_manager_autoreload/src/: main.cpp
examples/rotating_camera/: CMakeLists.txt
examples/rotating_camera/resources/: mesh.txt  shader.glsl
examples/rotating_camera/src/: main.cpp
examples/simple_ecs/: CMakeLists.txt
examples/simple_ecs/resources/: triangle_mesh.txt
examples/simple_ecs/src/: main.cpp
examples/simple_input/: CMakeLists.txt
examples/simple_input/src/: main.cpp
examples/simple_resource_manager/: CMakeLists.txt
examples/simple_resource_manager/resources/: triangle_mesh.txt
examples/simple_resource_manager/src/: main.cpp
examples/window/: CMakeLists.txt
examples/window/src/: main.cpp
utils/: CMakeLists.txt
utils/include/: identifier.hpp  identifier_generator.hpp  string_literal.hpp
utils/src/: identifier_generator.cpp
